examples/negative/modules/import_cycle/main.kai
import a

fn main() : Int = a_fn()
